<resources>
    <string name="app_name">Foret</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <string name="anonymousForum">게시판</string>
    <string name="search">검색</string>
    <string name="chatting">채팅</string>
    <string name="notification">알람</string>
    <string name="title_activity_foret_create">ForetCreateActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="default_region_selector">지역 고르기</string>
    <string name="default_tag_selector">태그 고르기</string>
</resources>