<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/homeFragment"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/home" />

    <item android:id="@+id/anonymousForumFragment"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/anonymousForum" />

    <item android:id="@+id/searchFragment"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/search" />

    <item android:id="@+id/chattingFragment"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/chatting" />

    <item android:id="@+id/notificationFragment"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/notification" />

</menu>